[gd_scene load_steps=5 format=2]

[ext_resource path="res://controls/controllers/default_controller.gd" type="Script" id=1]
[ext_resource path="res://controls/JoyStickx.gd" type="Script" id=3]
[ext_resource path="res://controls/Godot_TouchScreen_Joysticks_Joy.png" type="Texture" id=4]
[ext_resource path="res://controls/Godot_TouchScreen_Joysticks_JoyBG.png" type="Texture" id=5]

[node name="default_controller" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="mov_joy" type="TextureRect" parent="."]
anchor_left = 0.075
anchor_top = 0.629
anchor_right = 0.231
anchor_bottom = 0.906
margin_left = 0.110893
margin_top = -0.200989
margin_right = 0.431
margin_bottom = 0.359009
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
radius = 90.0
screen_rectangle = Rect2( 0, 125, 500, 600 )

[node name="Joystick_Ring" type="TextureRect" parent="mov_joy"]
margin_left = 31.0
margin_top = 24.0
margin_right = 191.0
margin_bottom = 184.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="aim_joy" type="TextureRect" parent="."]
anchor_left = 0.778
anchor_top = 0.629
anchor_right = 0.934
anchor_bottom = 0.906
margin_left = 0.156982
margin_top = -0.200989
margin_right = 0.47998
margin_bottom = 0.359009
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
radius = 110.0
screen_rectangle = Rect2( 700, 125, 500, 600 )

[node name="Joystick_Ring" type="TextureRect" parent="aim_joy"]
margin_left = 30.3396
margin_top = 17.687
margin_right = 190.34
margin_bottom = 177.687
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
